moved theme to top level directory and modified it further.

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
-baseurl = "hunter.werlla.com/"
+baseurl = "hunter.werlla.com"
 languageCode = "en-us"
 title = "Hunter Werlla"
 disableSitemap = true
+canonifyurls = true
 [Params]
   Author = "Hunter Werlla"
